--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,31 +1,26 @@
 @import 'header';
 
+
 html {
-    font-size: 62.5%; // 1rem is 10px
+    margin: 0;
+    padding: 0;
+
 }
 
-// *,
-// *::after,
-// *::before {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: inherit;
-//     font-family: 'montserrat';
-// }
-
 body {
+
     overflow-x: hidden;
     font-weight: normal;
- 
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
-    
+    background-color: #3fd0ed;
+    color: white;
 }
 
 .app {
-    margin-top: 2rem;
-    display: grid;
+
+
 }
