--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -21,7 +21,7 @@
             
             font-size: 1.3em;
             color: white;
-            font-weight: bold;
+            // font-weight: bold;
             transition: .5s;
             padding: 5px;
 
