--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,37 +1,20 @@
 .header {
     display: grid;
-    grid-template-columns: 20% 80%;
-    align-items: center;
-    height: 100px;
-    
+    grid-template-columns: 85% 15%;
+    grid-template-rows: 100%;
+
     &__leftColumn {
-        display: flex;
-        align-items: center;
-        margin-left: 20px;
-        
+        color: white;
     }
-
-
     &__rightColumn {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        margin-right: 20px;        
+        grid-column: 2/3;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        
         &__item {
-            
-            font-size: 1.3em;
-            color: white;
-            // font-weight: bold;
-            transition: .5s;
-            padding: 5px;
-
-        }
-        &__item:hover {
-            background-color: transparent;
-            // font-size: 1.7em;
-            letter-spacing: 2px;
-            color: rgba(255, 255, 255, 0.582);
+            justify-self: center;
+            font-size: 20px;
+            font-weight: bold;
         }
     }
 }
-
