--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -1,31 +1,31 @@
 .introWrapper {
-    height: 395px;
-    width: 1440px;
-    flex: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 
     &__nameWrapper {
-        font-size: 4rem;
-        font-weight: 700;
-        line-height: 4rem;
-        padding-bottom: 1rem;
-        font-family: Roboto,sans-serif;
+        grid-row: 1/2;
+        grid-column: 2/3;
 
+        justify-self: center;
+        font-size: 30px;
+        font-weight: bold;
     }
-   
-
     &__description {
+        grid-row: 2/3;
+        grid-column: 2/3;
 
 
+        justify-self: center;
+        font-size: 25px;
     }
-   
-
     &__socialIcons {
+        grid-row: 3/4;
+        grid-column: 2/3;
 
 
+        justify-self: center;
+        font-size: 25px;
     }
 }
