--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -2,14 +2,15 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 25% 10% 35% ;
 
     &__nameWrapper {
         grid-row: 1/2;
         grid-column: 2/3;
 
         justify-self: center;
-        font-size: 30px;
+        align-self: end;
+        font-size: 60px;
         font-weight: bold;
     }
     &__description {
@@ -18,6 +19,7 @@
 
 
         justify-self: center;
+        align-self: center;
         font-size: 25px;
     }
     &__socialIcons {
@@ -26,6 +28,10 @@
 
 
         justify-self: center;
-        font-size: 25px;
+        font-size: 50px;
+    }
+    &__socialIcons:hover {
+        color: rgba(255, 255, 255, 0.856);
+        
     }
 }
