--- a/src/style/portfolio.scss
+++ b/src/style/portfolio.scss
@@ -4,15 +4,19 @@
     &__portfolioPageWrapper {
 
         &__contentGrid {
-
+            display: grid;
+            grid-template-rows: 10vh 90vh;
             &__title {
-                font-size: 30px;
+                margin-top: 8vh;
+                font-size: 40px;
+                font-weight: bold;
                 display: flex;
                 justify-content: center;
             }
             &__portfolioWrapper {
                 display: grid;
                 grid-template-columns: repeat(4, 1fr);
+                align-content: center;
 
             }
         }
@@ -23,8 +27,35 @@
 
 .portfolioItem {
     justify-self: center;
-}
-.portfolioImg {
+    
+    &__img {
     display: flex;
     justify-content: center;
+        
+    }    
+    &__title {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+    }
+    &__dsc {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+    }
+    &__icon {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+    }
+    &__link {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+    }
+
+}
+
+.portfolioImg {
+    height: 15.9em;
 }
