--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 25% 10% 35% ;
 
-    &__nameWrapper {
+    &__name {
         grid-row: 1/2;
         grid-column: 2/3;
 
@@ -13,15 +13,7 @@
         font-size: 60px;
         font-weight: bold;
     }
-    &__description {
-        grid-row: 2/3;
-        grid-column: 2/3;
 
-
-        justify-self: center;
-        align-self: center;
-        font-size: 25px;
-    }
     &__socialIcons {
         grid-row: 3/4;
         grid-column: 2/3;
@@ -35,3 +27,14 @@
         
     }
 }
+
+    .home__title-writer {
+        grid-row: 2/3;
+        grid-column: 2/3;
+
+
+        justify-self: center;
+        align-self: center;
+        color: white;
+        font-size: 40px;
+    }
